card items alignment fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -133,6 +133,7 @@ h3 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100vw;
 }
 
 .titulo-habilidades {
@@ -146,21 +147,30 @@ h3 {
   width: 1216px;
   display: grid;
   grid-template-columns: auto auto auto;
+  column-gap: 10px;
 }
 
 .card {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: 10px;
   border: 1px solid #D9D9D9;
   border-radius: 10px;
+}
+
+.icon-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .icon-card {
   width: 80px;
   height: 80px;
+}
+
+h3.title-card {
+  text-align: center;
 }
 
 .text-card {
